# tg-bot-j

./: .dockerignore  .env  .env.example  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  container.py  main.py
app/bot/: anchor.py  fsm_states.py  keyboards.py  middlewares.py  text_input.py
app/bot/handlers/: actions.py  health.py  help.py  menu.py  profile.py  profile_wizard.py  search.py  search_params.py  settings.py  start.py  subscriptions.py
app/bot/i18n/: en.json  ru.json
app/domain/: dedup.py  filters.py  models.py  normalization.py  pipeline.py  scoring.py
app/infra/: db.py  db_models.py  dispatcher.py  http.py  redis.py
app/infra/migrations/: env.py  run.py
app/infra/migrations/versions/: 0001_initial.py  0002_ui_sessions_and_profile_ext.py
app/integrations/: adzuna_client.py
app/jobs/: scheduler.py  tasks.py
app/plugins/postprocessors/: enforce_salary_mix.py
app/plugins/rankers/: base.py  tfidf_title_desc.py
app/repositories/: applied.py  base.py  blacklist.py  favorites.py  profiles.py  shortkeys.py  subscriptions.py  ui_sessions.py  users.py
app/telemetry/: logger.py  metrics.py
scripts/: pretty.sh
tests/: conftest.py  test_adzuna_client.py  test_conflict.py  test_container.py  test_idempotency.py  test_pipeline.py
